# KnowledgeLockdownBreakers

./: .env.production  .gitignore  Dockerfile  INTEGRATION.md  README.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  server.js  signup_response.json  tailwind.config.cjs  tailwind.config.js  vercel.config.js  vercel.json  vite.config.ts
.github/workflows/: deploy-backend.yml
_archive/: fly.toml  render.yaml
assets/: index-Ds1iG-g6.js
backend/: .env  fly.toml  main.py  parse_card_id.py  pyproject.toml  requirements.txt  symbol_integration.py
backend/app/: main.py
backend/app/api/v1/: auth.py  cards.py  tokens.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: card.py  token.py  user.py
backend/app/schemas/: card.py  token.py  user.py
backend/app/services/: auth.py  card.py  token.py
backend/static/: index.html
discussion-ui/: index.html  package-lock.json  package.json
discussion-ui/src/: App.tsx
docs/: architecture.md
frontend/: .env  package.json  tailwind.config.js
frontend/src/: CreateCard.tsx
nft-contracts/: KnowledgeCardNFT.sol
public/: index.html
src/: App.tsx  CreateCard.tsx  SymbolIntegration.tsx  TestChat.tsx  TestNewChat.tsx  UserRegistration.tsx  env.d.ts  index.css  index.tsx  main.tsx  react-app-env.d.ts
src/components/: ChatComponent.tsx  ChatWithPdfTabs.tsx  Header.tsx  LogoSplash.tsx  MainLayout.tsx  NewSidebar.tsx  PdfViewer.tsx  RealtimeAudioProcessor.css  RealtimeAudioProcessor.tsx  Sidebar.tsx  (+4 more)
strategy-discussion/: .gitignore  README.md
test-app/: index.html
(+54 files in other folders)
